--- a/css/style.css
+++ b/css/style.css
@@ -1536,7 +1536,8 @@ body {
           background-color: transparent; }
           #header .header #navbar .nav-list ul li {
             position: relative;
-            display: flex; }
+            display: flex;
+            margin-right: 1em; }
             #header .header #navbar .nav-list ul li::before {
               position: absolute;
               content: '';
@@ -1553,14 +1554,14 @@ body {
               opacity: 1; }
             #header .header #navbar .nav-list ul li a {
               font-size: .9em;
-              padding: .3em 1em;
+              padding: .3em .5em;
               margin: 0 auto;
               display: block; }
               #header .header #navbar .nav-list ul li a::after {
                 display: none; }
             #header .header #navbar .nav-list ul li i {
-              color: #ead2a1;
-              margin-right: .3em;
+              color: #fffa;
+              margin-right: .1em;
               padding: .5em;
               font-size: 1em;
               border-radius: 50%; }
@@ -1569,7 +1570,7 @@ body {
               color: #ead2a1; }
             #header .header #navbar .nav-list ul li:hover i {
               transition: .3s;
-              color: #fff; }
+              color: #ead2a1; }
             #header .header #navbar .nav-list ul li:focus::before {
               width: 30%;
               opacity: 1; }
