--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -18,20 +18,26 @@
             // section header h1
             h1 {
                 margin-bottom: 50px;
-                background-image: linear-gradient(40deg, #000, $span-gold, skyblue, #000, skyblue, #dc143c, #000, skyblue, #000, $span-gold);
-                background-size: 900%;
-                background-position: 0%;
-                background-clip: text;
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-                animation: project-h1 15s infinite;
+                color: $span-gold;
+                text-shadow: 3px 2px 2px #000;
+                font-weight: 900;
+                // background-image: linear-gradient(40deg, #000, $span-gold, skyblue, #000, skyblue, #dc143c, #000, skyblue, #000, $span-gold);
+                // background-size: 900%;
+                // background-position: 0%;
+                // background-clip: text;
+                // -webkit-background-clip: text;
+                // -webkit-text-fill-color: transparent;
+                // animation: project-h1 15s infinite;
                 // h1 animation
-                @keyframes project-h1 {
-                    100% {
-                        background-position: 100%;
-                    }
-                }
+                // @keyframes project-h1 {
+                //     100% {
+                //         background-position: 100%;
+                //     }
+                // }
                 // end of h1 animation
+                &::before {
+                    opacity: .7;
+                }
             }
             // end of section header h1
         }
