--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -46,13 +46,14 @@ hamburger
         font-size: 3em;
     }
     font-weight: 500;
-    max-width: 100vw;
     color: #000;
+    max-width: 100vw;
     margin-bottom: 10px;
     text-transform: uppercase;
     letter-spacing: .1em;
     text-align: center;
     padding: .5em;
+    font-family: $font-ubuntu;
 }
 /* TEXT-REFLECT CSS */
 .section-title,
@@ -86,7 +87,7 @@ hamburger
 .section-title:after {
     content: '';
     display: block;
-    top: -8px;
+    top: -6px;
     left: 0;
     width: 100%;
     height: 60px;
