--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -37,6 +37,7 @@
                 // end of h1 animation
                 &::before {
                     opacity: .7;
+                    top: 2.25em;
                 }
             }
             // end of section header h1
