--- a/css/form.css
+++ b/css/form.css
@@ -4,6 +4,20 @@
   padding: 0;
   font-family: 'Gruppo', cursive; }
 
+.form-header {
+  height: 10vh;
+  overflow: hidden;
+  background-color: #29323c; }
+  .form-header .home-button {
+    padding: 1em 0; }
+    .form-header .home-button a {
+      margin: 0 5vw;
+      padding: 1.5em 0;
+      font-size: 1em; }
+      .form-header .home-button a i {
+        font-size: 1.5em;
+        color: #ead2a1; }
+
 .form-nav {
   background: #29323c; }
   .form-nav h1 {
