--- a/css/style.css
+++ b/css/style.css
@@ -402,13 +402,13 @@ hamburger
         position: relative;
         z-index: 1;
         text-overflow: ellipsis;
-        transition: 0.3s ease-in-out;
+        transition: 0.2s;
         overflow: hidden;
         border-radius: 10px;
         height: auto;
         line-height: 1.3; }
         #skills .dropdown .dropdown-content .skills-bottom .skills-item[data-scroll="in"] {
-          transition: 2s; }
+          transition: 1.5s; }
         #skills .dropdown .dropdown-content .skills-bottom .skills-item ul {
           margin: .2em;
           padding: .5em; }
@@ -502,8 +502,7 @@ hamburger
           #skills .dropdown .dropdown-content .skills-bottom .skills-item {
             flex-basis: 45%;
             margin: 2.5%;
-            height: 300px;
-            pointer-events: none; } }
+            height: 300px; } }
         @media (min-width: 1024px) {
           #skills .dropdown .dropdown-content .skills-bottom .skills-item {
             flex-basis: 33%;
@@ -514,6 +513,7 @@ hamburger
             cursor: pointer;
             transition: .2s; }
             #skills .dropdown .dropdown-content .skills-bottom .skills-item:hover {
+              transition: .5s;
               transform: scale(1.05); }
             #skills .dropdown .dropdown-content .skills-bottom .skills-item h2 {
               font-size: 1.5em; }
@@ -761,7 +761,7 @@ hamburger
           #projects .projects .all-projects .project-item:nth-child(even) {
             flex-direction: row-reverse; } }
       #projects .projects .all-projects .project-item .project-tile {
-        padding: 30px;
+        padding: 1.5em;
         flex-basis: 50%;
         width: 100%;
         height: 100%;
@@ -774,7 +774,8 @@ hamburger
         transition: 1.3s ease; }
         @media (min-width: 768px) {
           #projects .projects .all-projects .project-item .project-tile {
-            flex-basis: 50%; } }
+            flex-basis: 50%;
+            padding: 2em; } }
         #projects .projects .all-projects .project-item .project-tile h1 {
           font-size: 1.15em;
           width: 100%;
@@ -788,7 +789,7 @@ hamburger
           border-bottom: 1px dashed #ead2a1; }
           @media (min-width: 1024px) {
             #projects .projects .all-projects .project-item .project-tile h1 {
-              font-size: 2em; } }
+              font-size: 1.5em; } }
         #projects .projects .all-projects .project-item .project-tile h2 {
           font-size: .9em;
           line-height: 1.3;
