--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -21,20 +21,6 @@
                 color: $span-gold;
                 text-shadow: 3px 2px 2px #000;
                 font-weight: 900;
-                // background-image: linear-gradient(40deg, #000, $span-gold, skyblue, #000, skyblue, #dc143c, #000, skyblue, #000, $span-gold);
-                // background-size: 900%;
-                // background-position: 0%;
-                // background-clip: text;
-                // -webkit-background-clip: text;
-                // -webkit-text-fill-color: transparent;
-                // animation: project-h1 15s infinite;
-                // h1 animation
-                // @keyframes project-h1 {
-                //     100% {
-                //         background-position: 100%;
-                //     }
-                // }
-                // end of h1 animation
                 &::before {
                     opacity: .7;
                     top: 2.25em;
@@ -82,10 +68,10 @@
                     // border: 3px solid $span-gold;
                     @media (min-width: 768px){
                         flex-basis: 50%;
-                        
+                        padding: 2em;
                     }
 
-                    padding: 30px;
+                    padding: 1.5em;
                     flex-basis: 50%;
                     width: 100%;
                     height: 100%;
@@ -101,7 +87,7 @@
                         font-size: 1.15em;
                         width: 100%;
                         @media (min-width:1024px){
-                            font-size: 2em;
+                            font-size: 1.5em;
                         }
                         color: $span-gold;
                         font-weight: 900;
