--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -228,13 +228,13 @@
                     position: relative;
                     z-index: 1;
                     text-overflow: ellipsis;
-                    transition: 0.3s ease-in-out;
+                    transition: 0.2s;
                     overflow: hidden;
                     border-radius: 10px;
                     height: auto;
                     line-height: 1.3;
                     &[data-scroll="in"]{
-                        transition: 2s;
+                        transition: 1.5s;
                     }
 
                     ul {
@@ -378,7 +378,6 @@
                         flex-basis: 45%;
                         margin: 2.5%;
                         height: 300px;
-                        pointer-events: none;
                     }
                     // end of skills items on tablets
                     // skills items on desktop
@@ -391,6 +390,7 @@
                         cursor: pointer;
                         transition: .2s;
                         &:hover {
+                            transition: .5s;
                             transform: scale(1.05);
                         }
 
