--- a/css/style.css
+++ b/css/style.css
@@ -1608,7 +1608,7 @@ body {
           font-size: 2em; } }
       #home .hero #hero-h1 h1 span {
         display: inline-block;
-        color: #ead2a1;
+        color: #fff;
         text-align: left;
         font-size: 1.5em;
         opacity: 0;
@@ -1647,7 +1647,7 @@ body {
     position: relative;
     display: inline-block;
     text-align: center;
-    font-family: 'Gruppo', cursive;
+    font-family: 'Gruppo',cursive;
     padding: .5em 1em;
     margin: 0;
     width: 100%;
