--- a/scss/style.scss
+++ b/scss/style.scss
@@ -445,11 +445,10 @@ body {
 
                 span {
                     display: inline-block;
-                    color: $span-gold;
+                    color: $text-light;
                     text-align: left;
                     font-size: 1.5em;
                     opacity: 0;
-                    // text-shadow: 0 0 5px #000, 0 0 10px #dc143c;
                     line-height: 1.3;
                     animation: hero-span 5s ease-in-out;
                     animation-fill-mode: forwards;
@@ -514,8 +513,7 @@ body {
             position: relative;
             display: inline-block;
             text-align: center;
-            font-family: 'Gruppo',
-            cursive;
+            font-family: 'Gruppo',cursive;
             padding: .5em 1em;
             margin: 0;
             width: 100%;
