--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ hamburger
     line-height: 2em; }
     @media (min-width: 768px) {
       #skills .skills-top p {
-        font-size: 1.2em; } }
+        font-size: 1em; } }
     #skills .skills-top p span {
       font-size: 1em;
       color: #ead2a1; }
@@ -519,6 +519,26 @@ hamburger
               font-size: 1.5em; }
             #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
               font-size: 1em; } }
+
+#skills .git-img {
+  margin: 20vh auto 0;
+  width: 90%;
+  overflow: hidden;
+  height: auto;
+  transform: translateY(100%); }
+  #skills .git-img[data-scroll="in"] {
+    transition: 2s ease;
+    transform: translateY(0); }
+  #skills .git-img img {
+    width: 100%;
+    border-radius: 5px;
+    transition: .5s ease; }
+  @media (min-width: 768px) {
+    #skills .git-img {
+      width: 60%;
+      height: auto; } }
+  #skills .git-img:hover img {
+    transform: scale(1.05); }
 
 #contact .contact {
   flex-direction: column;
