--- a/scss/style.scss
+++ b/scss/style.scss
@@ -662,6 +662,7 @@ body {
             width: 100%;
             height: 100%;
             border-radius: 5px;
+            transition: .5s ease;
         }
     }
     // small screens
@@ -716,7 +717,12 @@ body {
         // background-color: pink;
         figure {
             img {
-                object-fit: cover;
+                object-fit: contain;
+            }
+            &:hover {
+                img {
+                    transform: scale(1.05);
+                }
             }
         }
         [data-scroll="in"] {
@@ -726,6 +732,7 @@ body {
     &.pad-me {
         figure {
             width: 50%;
+            position: relative;
             // border: 1px solid red;
             img {
                 object-fit: cover;
