index scroll sections setup

--- a/css/style.css
+++ b/css/style.css
@@ -1595,6 +1595,10 @@ body {
               color: #ead2a1; }
             #header .header #navbar .nav-list ul li:focus i {
               color: #ead2a1; }
+            #header .header #navbar .nav-list ul li.active a {
+              color: yellow; }
+            #header .header #navbar .nav-list ul li.active i {
+              color: pink; }
           #header .header #navbar .nav-list ul.active {
             background: none;
             box-shadow: none; } }
