--- a/css/style.css
+++ b/css/style.css
@@ -1799,10 +1799,14 @@ body {
         padding: 0 5vw; }
         .section-pad.pad-logo figure img {
           object-fit: cover; } }
-  .section-pad.pad-intro figure img {
-    object-fit: contain; }
-  .section-pad.pad-intro figure:hover img {
-    transform: scale(1.05); }
+  .section-pad.pad-intro figure {
+    border-radius: 5px;
+    overflow: hidden;
+    height: auto; }
+    .section-pad.pad-intro figure img {
+      object-fit: contain; }
+    .section-pad.pad-intro figure:hover img {
+      transform: scale(1.05); }
   .section-pad.pad-intro [data-scroll="in"] {
     transition: 1.5s ease; }
   .section-pad.pad-me figure {
