--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -28,7 +28,8 @@ hamburger
 /* The progress bar (scroll indicator) */
 .progress-bar {
     height: 4px;
-    background: var(--redGradient);
+    background: $span-gold;
+    opacity: .7;
     width: 0%;
 }
 /* end of progress bar*/
