progressbar and navbar z-index

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -23,6 +23,7 @@ hamburger
     width: 100%;
     height: 3px;
     background: transparent;
+    z-index: 2;
 }
 
 /* The progress bar (scroll indicator) */
