--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ hamburger
 .progress-container {
   width: 100%;
   height: 3px;
-  background: transparent; }
+  background: transparent;
+  z-index: 2; }
 
 /* The progress bar (scroll indicator) */
 .progress-bar {
@@ -1386,7 +1387,8 @@ body {
       justify-content: space-between;
       width: 100%;
       height: 100%;
-      padding: 1vh 5vw; }
+      padding: 1vh 5vw;
+      z-index: 5; }
       @media (max-width: 1200px) {
         #header .header #navbar {
           padding: 0 5vw; } }
