--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,6 +57,7 @@ body {
             width: 100%;
             height: 100%;
             padding: 1vh 5vw;
+            z-index: 5;
             @media (max-width: 1200px) {
                 padding: 0 5vw;
             }
