--- a/css/style.css
+++ b/css/style.css
@@ -1611,40 +1611,43 @@ body {
   position: relative;
   z-index: 1;
   overflow: hidden; }
-  #home .hero #hero-h1 {
-    margin: 1em auto;
-    background: transparent;
-    padding: .5em;
-    border-radius: 5px;
-    position: absolute;
-    top: 20vh; }
-    @media (min-width: 768px) {
-      #home .hero #hero-h1 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: .5em; } }
-    #home .hero #hero-h1 h1 {
-      margin-bottom: .2em;
-      display: block;
-      width: fit-content;
-      color: #eee;
-      font-family: 'Philosopher', sans-serif; }
+  #home .hero {
+    cursor: grab; }
+    #home .hero #hero-h1 {
+      margin: 1em auto;
+      background: transparent;
+      padding: .5em;
+      border-radius: 5px;
+      position: absolute;
+      top: 20vh; }
       @media (min-width: 768px) {
-        #home .hero #hero-h1 h1 {
-          font-size: 2em; } }
-      #home .hero #hero-h1 h1 span {
-        display: inline-block;
-        color: #fff;
-        text-align: left;
-        font-size: 1.5em;
-        opacity: 0;
-        line-height: 1.3;
-        animation: hero-span 5s ease-in-out;
-        animation-fill-mode: forwards;
-        animation-delay: calc(1s + .5s * var(--s));
-        /* hero h1 keyframes */
-        /* hero h1 keyframes */ }
+        #home .hero #hero-h1 {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          padding: .5em; } }
+      #home .hero #hero-h1 h1 {
+        margin-bottom: .2em;
+        display: block;
+        width: fit-content;
+        color: #eee;
+        font-family: 'Philosopher', sans-serif; }
+        @media (min-width: 768px) {
+          #home .hero #hero-h1 h1 {
+            font-size: 2em; } }
+        #home .hero #hero-h1 h1 span {
+          display: inline-block;
+          color: #fff;
+          text-align: left;
+          font-size: 1.5em;
+          opacity: 1;
+          line-height: 1.3;
+          animation-fill-mode: forwards;
+          animation-delay: calc(1s + .5s * var(--s));
+          transition: .5s;
+          transform-style: preserve-3d;
+          /* hero h1 keyframes */
+          /* hero h1 keyframes */ }
 
 @keyframes hero-span {
   10% {
@@ -1652,16 +1655,25 @@ body {
     transform: translateX(10px); }
   100% {
     opacity: 1; } }
-      #home .hero #hero-h1 h1#aka span {
-        position: relative;
-        display: inline-block;
-        animation: aka 5s ease alternate;
-        animation-delay: 4s;
-        animation-fill-mode: forwards;
-        margin: .5em 0;
-        color: #ead2a1;
-        opacity: 0;
-        transform: scale(0.7); }
+          #home .hero #hero-h1 h1 span:hover {
+            color: #ead2a1;
+            cursor: grabbing;
+            transform: scale(1.2) rotateY(30deg);
+            transition: 1s; }
+
+@keyframes hover {
+  100% {
+    transform: scale(1.1); } }
+        #home .hero #hero-h1 h1#aka span {
+          position: relative;
+          display: inline-block;
+          animation: aka 5s ease alternate;
+          animation-delay: 4s;
+          animation-fill-mode: forwards;
+          margin: .5em 0;
+          color: #ead2a1;
+          opacity: 0;
+          transform: scale(0.7); }
 
 @keyframes aka {
   50% {
@@ -1669,70 +1681,70 @@ body {
     transform: scale(1); }
   100% {
     opacity: .8; } }
-  #home .hero #cta-header {
-    font-size: 1.3em;
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    font-family: 'Gruppo',cursive;
-    padding: .5em 1em;
-    margin: 0;
-    width: 100%;
-    border-radius: 20px;
-    border: none;
-    outline: none;
-    opacity: 1;
-    transform: rotateX(-90deg);
-    transform-style: preserve-3d;
-    animation: show-cta 4s 5.5s;
-    animation-fill-mode: forwards;
-    transition: .3s linear;
-    cursor: pointer;
-    -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
-    z-index: 2; }
-    @media (min-width: 768px) {
-      #home .hero #cta-header {
-        font-size: 1.5em; } }
+    #home .hero #cta-header {
+      font-size: 1.3em;
+      position: relative;
+      display: inline-block;
+      text-align: center;
+      font-family: 'Gruppo',cursive;
+      padding: .5em 1em;
+      margin: 0;
+      width: 100%;
+      border-radius: 20px;
+      border: none;
+      outline: none;
+      opacity: 1;
+      transform: rotateX(-90deg);
+      transform-style: preserve-3d;
+      animation: show-cta 4s 5.5s;
+      animation-fill-mode: forwards;
+      transition: .3s linear;
+      cursor: pointer;
+      -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
+      z-index: 2; }
+      @media (min-width: 768px) {
+        #home .hero #cta-header {
+          font-size: 1.5em; } }
 
 @keyframes show-cta {
   100% {
     opacity: 1;
     transform: rotateX(0) translateY(5%); } }
-    #home .hero #cta-header::before, #home .hero #cta-header::after {
-      position: absolute;
-      content: '';
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border-radius: 20px;
-      transition: .3s ease;
-      border: none;
-      outline: none; }
-    #home .hero #cta-header::before {
-      box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a;
-      background: linear-gradient(0deg, #581212, #dc134c); }
-    #home .hero #cta-header::after {
-      opacity: 1;
-      z-index: -1;
-      animation: 3s cta-btn infinite;
-      animation-delay: 6s;
-      transition: .3s;
-      outline: none;
-      border: none;
-      background: linear-gradient(0deg, #20262e, #485563);
-      box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a; }
-    #home .hero #cta-header span {
-      position: relative;
-      display: inline-block;
-      text-transform: uppercase;
-      color: #fff;
-      font-size: 2em;
-      font-weight: 700;
-      animation: animate 3s ease-in-out infinite;
-      animation-delay: calc(1s + .2s * var(--i));
-      /* cta keyframes*/
-      /* end of cta keyframes*/ }
+      #home .hero #cta-header::before, #home .hero #cta-header::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        transition: .3s ease;
+        border: none;
+        outline: none; }
+      #home .hero #cta-header::before {
+        box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a;
+        background: linear-gradient(0deg, #581212, #dc134c); }
+      #home .hero #cta-header::after {
+        opacity: 1;
+        z-index: -1;
+        animation: 3s cta-btn infinite;
+        animation-delay: 6s;
+        transition: .3s;
+        outline: none;
+        border: none;
+        background: linear-gradient(0deg, #20262e, #485563);
+        box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a; }
+      #home .hero #cta-header span {
+        position: relative;
+        display: inline-block;
+        text-transform: uppercase;
+        color: #fff;
+        font-size: 2em;
+        font-weight: 700;
+        animation: animate 3s ease-in-out infinite;
+        animation-delay: calc(1s + .2s * var(--i));
+        /* cta keyframes*/
+        /* end of cta keyframes*/ }
 
 @keyframes animate {
   0% {
@@ -1742,19 +1754,19 @@ body {
   40%,
   100% {
     transform: translateY(0); } }
-    #home .hero #cta-header:hover {
-      transform: scale(0.97); }
-      #home .hero #cta-header:hover span {
-        color: #ead2a1;
-        animation: none; }
-      #home .hero #cta-header:hover::before {
-        opacity: 0; }
-      #home .hero #cta-header:hover::after {
-        background-position: 100%;
-        opacity: 1; }
-    #home .hero #cta-header:active {
-      transition: .2s;
-      transform: scale(0.95); }
+      #home .hero #cta-header:hover {
+        transform: scale(0.97); }
+        #home .hero #cta-header:hover span {
+          color: #ead2a1;
+          animation: none; }
+        #home .hero #cta-header:hover::before {
+          opacity: 0; }
+        #home .hero #cta-header:hover::after {
+          background-position: 100%;
+          opacity: 1; }
+      #home .hero #cta-header:active {
+        transition: .2s;
+        transform: scale(0.95); }
 
 .section-pad {
   height: 90vh;
