--- a/scss/style.scss
+++ b/scss/style.scss
@@ -413,7 +413,7 @@ body {
     overflow: hidden;
 
     .hero {
-
+        cursor: grab;
         // animated h1 
         #hero-h1 {
             margin: 1em auto;
@@ -449,13 +449,14 @@ body {
                     color: $text-light;
                     text-align: left;
                     font-size: 1.5em;
-                    opacity: 0;
+                    opacity: 1;
                     line-height: 1.3;
-                    animation: hero-span 5s ease-in-out;
+                    // animation: hero-span 5s ease-in-out;
                     animation-fill-mode: forwards;
                     animation-delay: calc(1s + .5s * var(--s));
+                    transition: .5s;
+                    transform-style: preserve-3d;
 
-                    // transition: all 3s;
                     /* hero h1 keyframes */
                     @keyframes hero-span {
                         10% {
@@ -467,8 +468,20 @@ body {
                             opacity: 1;
                         }
                     }
-
                     /* hero h1 keyframes */
+
+                    &:hover {
+                        color: $span-gold;
+                        cursor: grabbing;
+                        transform: scale(1.2) rotateY(30deg);
+                        transition: 1s;
+
+                        @keyframes hover {
+                            100% {
+                                transform: scale(1.1);
+                            }
+                        }
+                    }
                 }
 
                 // "aka" span
