--- a/css/style.css
+++ b/css/style.css
@@ -1356,7 +1356,7 @@ hamburger
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 5em; }
+  scroll-padding-top: 5vh; }
 
 body {
   font-family: "Montserrat", sans-serif;
@@ -1640,11 +1640,12 @@ body {
           color: #fff;
           text-align: left;
           font-size: 1.5em;
-          opacity: 1;
+          opacity: 0;
           line-height: 1.3;
+          animation: hero-span 5s ease-in-out;
           animation-fill-mode: forwards;
           animation-delay: calc(1s + .5s * var(--s));
-          transition: .5s;
+          transition: 1s;
           transform-style: preserve-3d;
           /* hero h1 keyframes */
           /* hero h1 keyframes */ }
@@ -1658,12 +1659,8 @@ body {
           #home .hero #hero-h1 h1 span:hover {
             color: #ead2a1;
             cursor: grabbing;
-            transform: scale(1.2) rotateY(30deg);
-            transition: 1s; }
-
-@keyframes hover {
-  100% {
-    transform: scale(1.1); } }
+            transition: 1s;
+            transform: scale(1.2) rotateY(30deg); }
         #home .hero #hero-h1 h1#aka span {
           position: relative;
           display: inline-block;
@@ -1800,7 +1797,8 @@ body {
           object-position: top;
           object-fit: contain; } }
   .section-pad.pad-logo {
-    overflow: hidden; }
+    overflow: hidden;
+    height: 100vh; }
     .section-pad.pad-logo [data-scroll="in"] {
       transition: 2s;
       transform: translateX(0); }
@@ -1811,7 +1809,10 @@ body {
         object-fit: cover; }
     @media (max-width: 768px) {
       .section-pad.pad-logo {
-        padding: 0 5vw; }
+        padding: 0 5vw;
+        height: 90vh;
+        display: grid;
+        place-items: center; }
         .section-pad.pad-logo figure img {
           object-fit: cover; } }
   .section-pad.pad-intro figure {
